--- a/.github/workflows/deploy-functions.yaml
+++ b/.github/workflows/deploy-functions.yaml
@@ -8,7 +8,7 @@ jobs:
   generate-matrix:
     uses: "./.github/workflows/generate-matrix.yaml"
     with:
-      deploy_folders: "example_function1, example_function2"
+      deploy_folders: 
       trigger_deploy_all_folders: "common"
 
   deploy:
@@ -21,7 +21,7 @@ jobs:
         # Add environments to deploy to.
         # Each environment should have a corresponding github environment with secrets.
         environment:
-          - test
+          - prod
 
     environment: ${{ matrix.environment }}
 
@@ -80,12 +80,11 @@ jobs:
           # Parameters you may likely hardcode here directly.
           # - If you need to specify them individually, change them into...:
           # foo_bar: ${{ steps.extract_params.outputs.foo_bar }}
-          deployment_client_id: 5f18d04a-2d2a-41a2-aa15-bd62a149cd14
-          deployment_tenant_id: 0d75f6b8-c6b9-4e84-baca-503e08aa7e4a
-          schedules_client_id: 9347b37d-e94f-44d5-a69d-5867f55d7f6e
-          schedules_tenant_id: 0d75f6b8-c6b9-4e84-baca-503e08aa7e4a
-          cdf_project: forge-sandbox  # or my-company, my-organisation-prod etc.
-          cdf_cluster: greenfield  # or api, westeurope-1, etc.
+          deployment_client_id: ${{ secrets.DEPLOYMENT_CLIENT_ID }}
+          schedules_client_id: ${{ secrets.SCHEDULE_CLIENT_ID }}
+
+          cdf_project: viridorenergy  # or my-company, my-organisation-prod etc.
+          cdf_cluster: api  # or api, westeurope-1, etc.
           runtime: py39
           await_deployment_success: true  # set to false to skip waiting for deployments entirely
 
@@ -102,6 +101,8 @@ jobs:
           # Individual parameters per function we read from:
           # - function_config.yaml
           # - function_config_[environment].yaml
+          schedules_tenant_id: ${{ steps.extract_params.outputs.tenant_id }}
+          deployment_tenant_id: ${{ steps.extract_params.outputs.tenant_id }}
           data_set_id: ${{ steps.extract_params.outputs.data_set_id }}
           common_folder: ${{ steps.extract_params.outputs.common_folder }}
           function_deploy_timeout: ${{ steps.extract_params.outputs.function_deploy_timeout }}
@@ -112,5 +113,5 @@ jobs:
           metadata: ${{ steps.extract_params.outputs.metadata }}
 
           # Individual parameters seldom needed:
-          index_url: ${{ steps.extract_params.outputs.index_url }}
-          extra_index_urls: ${{ steps.extract_params.outputs.extra_index_urls }}
+          #index_url: ${{ steps.extract_params.outputs.index_url }}
+          #extra_index_urls: ${{ steps.extract_params.outputs.extra_index_urls }}
