--- a/.github/workflows/deploy-pr.yaml
+++ b/.github/workflows/deploy-pr.yaml
@@ -9,6 +9,7 @@ jobs:
       matrix:
         function:
           - Bargeddie_Uptime_Calculation_per_line
+          - Bargeddie_Line_status
     steps:
       - uses: actions/checkout@v2
 
