--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,11 +6,11 @@ authors = ["Håkon Treider <hakon.treider@cognite.com>"]
 package-mode = false
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "^3.13"
 pytest-custom-exit-code = ">=0.3"
 cognite-sdk = ">=7"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 pytest = ">=7"
 pre-commit = ">=3"
 
