--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ package-mode = false
 python = "^3.13"
 pytest-custom-exit-code = ">=0.3"
 cognite-sdk = ">=7"
+scipy-stubs = "^1.16.1.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = ">=7"
