--- a/.github/workflows/deploy-pr.yaml
+++ b/.github/workflows/deploy-pr.yaml
@@ -10,11 +10,11 @@ jobs:
         function:
           - Bargeddie_Average_filter
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
       - uses: actions/setup-python@v4
         with:
-          python-version: '3.13.5'
+          python-version: "3.13.5"
 
       - name: Load cached $HOME/.local
         uses: actions/cache@v4
