Adding function for including AMCS data

--- a/.github/workflows/deploy-functions.yaml
+++ b/.github/workflows/deploy-functions.yaml
@@ -8,7 +8,7 @@ jobs:
   generate-matrix:
     uses: "./.github/workflows/generate-matrix.yaml"
     with:
-      deploy_folders: "Bargeddie_deploy_functions"
+      deploy_folders: "Bargeddie_amcs_data"
       trigger_deploy_all_folders: "common"
 
   deploy:
