--- a/.github/workflows/deploy-pr.yaml
+++ b/.github/workflows/deploy-pr.yaml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       matrix:
         function:
-          - Bargeddie_deploy_functions
+          - Bargeddie_amcs_data
     steps:
       - uses: actions/checkout@v4
 
